--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -13,10 +13,10 @@
 </div>
 <div class="row m-4">
     <div class="col-lg-6 offset-lg-3">
-        <b>RSVPs ({{rsvps.length}})</b>
-        <a href="/events/{{event.id}}/rsvps/new" class="btn btn-primary btn-sm">RSVP</a>
+        <b>Reservations ({{rsvps.length}})</b>
+        <a href="/events/{{event.id}}/rsvps/new" class="btn btn-primary btn-sm">Reserve</a>
 
-        <div class="list-group">
+        <div class="list-group mt-3">
             {{#each rsvps}}
             <div class="list-group-item clearfix">
                 <div class="float-left">
