--- a/views/events-index.handlebars
+++ b/views/events-index.handlebars
@@ -1,6 +1,5 @@
 <div class="row m-4">
   <div class="col-lg-6 offset-lg-3">
-    <h1>Reviews</h1>
     <a href="/events/new">New Event</a>
     <h1>Events</h1>
     {{#each events}}
@@ -11,7 +10,7 @@
         <p class="card-text">{{this.desc}}</p>
         <div class="text-right">
           <a href="/events/{{this.id}}" class="btn btn-primary">View</a>
-          <a href="/events/{{this.id}}/rsvps/new" class="btn btn-info">Rsvp</a>
+          <a href="/events/{{this.id}}/rsvps/new" class="btn btn-info">Reserve</a>
 
         </div>
       </div>
