--- a/views/rsvps-new.handlebars
+++ b/views/rsvps-new.handlebars
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-title">
-                    <h3>New RSVP</h3>
+                    <h3>New Reservations</h3>
                     <div class="lead">
                         Event: {{event.title}}
                     </div>
